@@ -2,6 +2,7 @@
  - enh: introduce APIOutdatedError (server response)
  - enh: inform the user to upgrade DCOR-Aid, if the server does not
    support the current version
+ - fix: handle spaces in uploaded resources names (#51)
  - ref: combine response handling for API GET and POST requests
 0.8.4
  - fix: properly handle "user_list" for anonymous users
